--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 			<div class="row">
 				<div class="col s6">
-					<img src="static/img/coding/mantro.png" id="modal-image" style="width: 100%; height: auto;">
+					<img src="static/img/coding/mantro.png" id="modal-image" class="materialboxed" style="width: 100%; height: auto;">
 				</div>
 
 				<div class="col s6">
