This is a quick push meant to get the branch ready to be checked out by someone else. Possible not working code.

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 				<p id="search_icon" onclick="window.open('https://www.linkedin.com/in/eash-aggarwal/')" class="right pointer black-text nomargin right-align" style="font-weight: 600; font-size: 24px; margin-left: 15px !important;">
 					<i class="fab fa-linkedin black-text"></i> 
 				</p>
-				<p id="search_icon" onclick="window.open('https://www.instagram.com/eashspieces/')" class="right pointer black-text nomargin right-align" style="font-weight: 600; font-size: 24px; margin-left: 15px !important;">
+				<!-- <p id="search_icon" onclick="window.open('https://www.instagram.com/eashspieces/')" class="right pointer black-text nomargin right-align" style="font-weight: 600; font-size: 24px; margin-left: 15px !important;">
 					<i class="fab fa-instagram black-text"></i>
-				</p>
+				</p> -->
 				<p id="search_icon" onclick="window.open('https://github.com/eash268')" class="right pointer black-text nomargin right-align" style="font-weight: 600; font-size: 24px; margin-left: 15px !important;">
 					<i class="fab fa-github black-text"></i>
 				</p>
