--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
 			<h4 id="modal-title">Modal Header</h4>
 
 			<div class="row">
-				<div class="col s6">
+				<div class="col m6 s12">
 					<img src="static/img/coding/mantro.png" id="modal-image" class="materialboxed" style="width: 100%; height: auto;">
 				</div>
 
-				<div class="col s6">
+				<div class="col m6 s12">
 					<p id="modal-description">A bunch of text</p>
 					<p id="modal-technologies">A bunch of technologies</p>
 					<p id="modal-url">A URL</p>
