This is a quick push meant to get the branch ready to be checked out by someone else. Possible not working code.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
-	<meta name="description" content="I am an entrepreneur who is experienced in technology and artificial intelligence at scale. Prior to co-founding a quantitative hedge fund which was acquired by BlockTower Capital in 2021, I worked as a software engineer and as a data scientist with experience in machine learning. My quantitative neuroscience research has been featured in reputed publications and presented to the director of DARPA, among other industry leaders. At my core, I am fascinated by the intersection of art, science, and technology. I believe the best products are those which are both functional and beautiful, and I hope to change the world with such creations of my own.">
+	<meta name="description" content="I am an entrepreneur who is experienced in technology and artificial intelligence at scale. I am currently building at Hebbia, the generational AGI startup seeking to transform knowledge work. Prior to co-founding a quantitative hedge fund which was acquired in 2021, I worked as a software engineer and as a data scientist with experience in machine learning. My quantitative neuroscience research has been featured in reputed publications and presented to the director of DARPA, among other industry leaders. At my core, I am fascinated by the intersection of art, science, and technology. I believe the best products are those which are both functional and beautiful, and I hope to change the world with such creations of my own.">
 
 	<!-- Required OGP Tags -->
 	<meta property="og:title" content="Eash Aggarwal" />
